sandbox/output
Anagram.java:7: error: cannot find symbol
        if (string.length == 2) {
                  ^
  symbol:   variable length
  location: variable string of type String
1 error
